Begin work on motor impl
